@@ -32,6 +32,18 @@ For debugging uncomment the following lines in the index.php
 
 Please report founded bugs on https://github.com/pklink/ppma/issues
 
+### Building
+
+Is not needed if you download the prebuilt release
+
+```bash
+git clone https://github.com/pklink/ppma.git
+cd ppma/
+php composer.phar install
+npm install
+grunt
+``
+
 ## Upgrading
 
 1. back up your database
