@@ -1,9 +1,8 @@
 $(function() {
-
-    $('nav .search [name=q]').autocomplete({
-        source:    $('nav .search [name=q]').first().attr('rel'),
-        minLength: 3
-    });
-
-
+    if ($('nav .search [name=q]').length > 0) {
+        $('nav .search [name=q]').autocomplete({
+            source:    $('nav .search [name=q]').first().attr('rel'),
+            minLength: 3
+        });
+    }
 });
