@@ -1,0 +1,11 @@
+{
+    "name": "ppma",
+    "version": "0.3.6",
+    "devDependencies": {
+        "grunt": "~0.4.2",
+        "grunt-contrib-jshint": "~0.6.3",
+        "grunt-contrib-nodeunit": "~0.2.0",
+        "grunt-contrib-uglify": "~0.2.2",
+        "grunt-contrib-clean": "~0.5.0"
+    }
+}
