@@ -8,8 +8,6 @@
         array('label' => 'Create Tag', 'url' => array('create'), 'linkOptions' => array('rel' => 'fancy')),
     );
 
-    // register scripts
-    Yii::app()->clientScript->registerScriptFile(Yii::app()->baseUrl . '/js/toggle-search.js');
 ?>
 
 <h1>Manage Tags</h1>
